fix: overflowing page

--- a/style.css
+++ b/style.css
@@ -363,6 +363,8 @@ header {
 .investment-opportunities p > span {
   
   display: block;
+  width: 100%;
+  border: 1px red solid;
 }
 
 .investment-opportunities button {
